# FISK

./: .gitignore  CMakeLists.txt
data/: position_Sprite.txt
data/sprites/: dices_atlas.xml  ui_atlas.xml
data/sprites/lands/: path.txt
data/src_ase/: fisk_map.aseprite  fisk_map_mockup.aseprite  fisk_map_mockup_example.aseprite  fisk_ui.aseprite
src/: client.cc  clientServ.cc  server.cc
src/client/: CardEntity.cc  CardEntity.h  CardScene.cc  CardScene.h  ClientNetwork.cc  ClientNetwork.h  DicesEntity.cc  DicesEntity.h  EndScene.cc  EndScene.h  FiskColors.cc  FiskColors.h  GameHub.cc  GameHub.h  HandEntity.cc  HandEntity.h  HudButtons.cc  HudButtons.h  LandEntity.cc  LandEntity.h  LandShape.cc  LandShape.h  LandSprite.cc  LandSprite.h  LobbyPlayer.cc  LobbyPlayer.h  LobbyScene.cc  LobbyScene.h  MainScene.cc  MainScene.h  MapEntity.cc  MapEntity.h  PhaseIndicator.cc  PhaseIndicator.h  TitleScene.cc  TitleScene.h  TurnInterface.cc  TurnInterface.h  UnitSelector.cc  UnitSelector.h  (+4 more)
src/client/old/: LandShape.cc  LandShape.h
src/common/: Card.cc  Card.h  Constants.h  Continent.cc  Continent.h  Enums.h  FiskColors.cc  Game.cc  Game.h  Land.cc  Land.h  NetworkConstants.h  NetworkProtocol.h  NetworkProtocolData.h  Player.cc  Player.h  networkMisc.h
src/server/: GameFactory.cc  GameFactory.h  GameInstance.cc  GameInstance.h  Map1Factory.cc  Map1Factory.h  ServerGroup.cc  ServerGroup.h  ServerLobby.cc  ServerLobby.h  ServerNetwork.cc  ServerNetwork.h  ServerPlayer.cc  ServerPlayer.h  server.cc
